tests/specs/run/package_json_type/none/main_cjs.out
error: Uncaught (in promise) ReferenceError: require is not defined
const { add } = require("./add");
                ^
    at file:///[WILDLINE]
